kasten/kasten-minimum-retention/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: kyverno_data_protection_tests
policies:
- ../kasten-minimum-retention.yaml
resources:
- kasten-skipped-policies.yaml
- kasten-hourly-policy.yaml
results:
- kind: Policy
  patchedResources: patched.yaml
  policy: kasten-minimum-retention
  resources:
  - hourly-policy
  result: pass
  rule: kasten-minimum-retention
- kind: Policy
  policy: kasten-minimum-retention
  resources:
  - ondemand-policy
  result: skip
  rule: kasten-minimum-retention
- kind: Policy
  policy: kasten-minimum-retention
  resources:
  - preset-policy
  result: skip
  rule: kasten-minimum-retention
